@@ -1,3 +1,9 @@
+2002-05-13  Jeff Freedman  <jeff@amy.nerble.net>
+
+	* schedule.cc:  Added Follow_avatar_schedule, and moved some of
+	the party logic here.
+	* actors.cc:  Moved some logic out, to schedule.cc.
+
 2002-05-12  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
 	* mapedit/studio.cc: catch usecode debugging messages
 	* shapes/shapeinf.cc: memory leak
